# distributed_systems_assn

Assignment_2/: README.md
Assignment_2/auth_service/: auth.py  logger.py  tokens.py
Assignment_2/transaction_service/: database.py  main.py  models.py  schemas.py
Assignment_2_Full_Code/: pyproject.toml
Assignment_2_Full_Code/auth_service/: main.py
Assignment_2_Full_Code/transaction_service/: logger.py
Assignment_3/: README.md  pyproject.toml  test.py
Assignment_3/app/: main.py
Assignment_3/app/api/v1/endpoints/: queue.py
Assignment_3/app/core/: config.py  logger.py  persistence.py  storage.py
Assignment_3/app/models/: queue.py
Assignment_4/: .env  Documentation.docx  README.md  docker-compose.yml
Assignment_4/app/: Dockerfile  main.py  mpi_master.py  mpi_worker.py  requirements.txt
Assignment_4/app/core/: config.py
Assignment_4/app/model/: predictor.py
Assignment_4/app/queue_client/: results_queue_client.py  transactions_queue_client.py
Assignment_4/queue_service/: Dockerfile  requirements.txt  test.py
Assignment_4/queue_service/app/: main.py
Assignment_4/queue_service/app/api/v1/endpoints/: queue.py
Assignment_4/queue_service/app/core/: config.py  persistence.py  queue_initializer.py  storage.py
